// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorDescriptor useDefaultMessage uses default message if new one is not provided 1`] = `[Error: Default message]`;

exports[`ErrorDescriptor useDefaultMessage uses default message if new one is not provided 2`] = `[Error: Custom message]`;

exports[`ErrorDescriptor useDefaultMessage uses provided error class to construct the error 1`] = `
CustomError {
  "code": "C_2",
  "tommy": "lee",
}
`;

exports[`ErrorDescriptor useDefaultMessage uses provided error class to construct the error 2`] = `
CustomError {
  "code": "C_2",
  "tommy": "lee",
}
`;

exports[`ErrorDescriptor useMessageFormatter uses created message 1`] = `[Error: Hello: bar]`;

exports[`ErrorDescriptor useMessageFormatter uses provided error class to construct the error 1`] = `
CustomError {
  "code": "C_2",
  "tommy": "lee",
}
`;

exports[`ErrorDescriptor withExtraProperties adds extra attributes to created errors 1`] = `
CustomError {
  "code": "C_10",
  "dadu": "dadu",
  "foo": "bar",
  "tommy": "lee",
}
`;
